--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ttrends"
 version = "0.1.0"
-authors = ["Masumi Kawasaki <mkawasaki@sbihg.co.jp>"]
+authors = ["geeknees"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
